# jijo

./: .travis.yml  ChangeLog.md  LICENSE  README.md  jijo.cabal
lib/Jijo/: Definition.hs  Path.hs  RecordField.hs  Validation.hs
lib/Jijo/RecordField/: TH.hs
test/Jijo/: DefinitionSpec.hs  PathSpec.hs
