cabal-version: 2.2
name: jijo
version: 0.1
synopsis: Bidirectional JSON serialization
description:
  jijo (JSON in, JSON out) is a JSON schema EDSL based on
  composable abstractions, @Applicative@ and @Category@.
  .
  Features include:
  .
  * Schema is independent from the domain types, unlike derived instances.
  * Bidirectional definitions, no risk for serialization/deserialization code
    to get out of sync.
  * Structured validation errors, not strings.
  * Accumulation of validation errors, not failure on the first one.

license: BSD-3-Clause
license-file: LICENSE
extra-source-files:
  ChangeLog.md

author: Vladislav Zavialov, Artyom Kazak
maintainer: Monadfix <hi@monadfix.com>
category: Text, Web, JSON

homepage: https://github.com/monadfix/jijo
bug-reports: https://github.com/monadfix/jijo/issues

build-type: Simple

tested-with:
  GHC==8.4.4
  GHC==8.6.5
  GHC==8.8.1

source-repository head
  type: git
  location: git://github.com/monadfix/jijo.git

library
  exposed-modules:
    Jijo.Definition
    Jijo.Path
    Jijo.Validation
    Jijo.RecordField
    Jijo.RecordField.TH
  build-depends:
    base < 5,
    text,
    containers,
    unordered-containers,
    transformers,
    tagged,
    profunctors,
    aeson,
    dlist,
    scientific,
    vector,
    template-haskell
  hs-source-dirs:
    lib
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -Wcompat

test-suite jijo-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Jijo.DefinitionSpec
    Jijo.PathSpec
  hs-source-dirs:
    test
  default-extensions:
    DataKinds
    TypeOperators
    DeriveFunctor
    DeriveGeneric
    FlexibleInstances
    KindSignatures
    MultiParamTypeClasses
    ScopedTypeVariables
    TypeApplications
    StrictData
    LambdaCase
    RecordWildCards
    OverloadedStrings
    GeneralizedNewtypeDeriving
    DerivingStrategies
    UndecidableInstances
    RankNTypes
  ghc-options:
    -Wall
    -Wcompat
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
    aeson,
    base,
    jijo,
    bytestring,
    containers,
    dlist,
    email-validate,
    hedgehog,
    hspec,
    hspec-discover,
    hw-hspec-hedgehog,
    lens,
    lens-aeson,
    megaparsec,
    optparse-applicative,
    profunctors,
    scientific,
    tagged,
    template-haskell,
    text,
    transformers,
    unordered-containers,
    uuid,
    vector
  build-tool-depends: hspec-discover:hspec-discover
  default-language: Haskell2010
